<resources>
    <string name="app_name">FUCK YOU PAULO</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="play">Play Game</string>
    <string name="add_deck">Add Deck</string>
    <string name="add_question">Add Question</string>
    <string name="decks">My Decks</string>
    <string name="back">Go Back</string>
    <string name="add_player">Add Player</string>
    <string name="deck_list">deck_list</string>
    <string name="delete">Delete Question</string>
    <string name="save">Save Deck</string>
    <string name="save_conf">Save Questions</string>
    <string name="save_question">Save Question</string>
    <string name="option">Choose a kind of Card</string>
    <string name="add_own">Add own Question</string>


    <string name="add_your_text">Add your own text!</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_three">Player Three</string>
    <string name="or">or drink</string>
    <string name="sips">sips.</string>
</resources>